Introduce BackspaceStateMachine

BackspaceStateMachine is for deleting complex unicode sequence by
backspace key event.  This CL only introduces surrogate pair handling.
Note that BackspaceStateMachine will be compiled, linked and tested but
not yet used in production with this CL.

BUG=594920
R=yosin

Review URL: https://codereview.chromium.org/1832343002

Cr-Commit-Position: refs/heads/master@{#383685}

Former-commit-id: 112c661e776be3a9a3ba04c2de484d0687630e83